--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <li><a href="2.html">Back-end</Back-end></a></li>
         </ol>
         <h2>LikeLion</h2>
-        <p>멋쟁이사자처럼 대학은 테크 기반의 아이디어 실현을 위한 전국 최대 규모의 대학 엽합 창업 동아리입니다. 코딩을 해보신 적이 없어도 괜찮아요. 멋대 11기에서 코딩을 배워 자신만의 아이디어를 실현해보세요.</p>
+        <p>심바. 멋쟁이사자처럼 대학은 테크 기반의 아이디어 실현을 위한 전국 최대 규모의 대학 엽합 창업 동아리입니다. 코딩을 해보신 적이 없어도 괜찮아요. 멋대 11기에서 코딩을 배워 자신만의 아이디어를 실현해보세요.</p>
         <p>다른 대학의 멋사인들은 어떤 아이디어를 가지고 있을까요? 매년 여름, 전국 1,000여명 이상이 참가하는 멋대 전체 해커톤에 참가하여 직접 확인해보세요.</p> 
     </body>
 </html>
