--- a/1.html
+++ b/1.html
@@ -1,20 +1,27 @@
 <!doctype html>
 <html>
     <head>
-        <title>LikeLion</title>
+        <title>LionKin - Simba</title>
         <meta charset="utf-8">
     </head>
     <body>
-        <h1><a href="index.html">LikeLion</a></h1>
+        <h1><a href="index.html">LionKing</a></h1>
         <ol>
-            <li><a href="1.html">Front-end</a></li>
-            <li><a href="2.html">Back-end</a></li>
+            <li><a href="1.html">Simba</a></li>
+            <li><a href="3.html">Timon</a></li>
+            <li><a href="2.html">Pumbaa</a></li>
         </ol>
-        <h2>Front-end</h2>
-        <p>프론트엔드(Front-end)란 웹사이트의 사용자 인터페이스(UI)와 사용자 경험(UX)을 개발하는 것입니다. 프론트엔드 개발은 백엔드 API에서 가져온 데이터의 입출력을 통해 비즈니스 로직 구성과 유저 인터페이스를 개발하는 것입니다.
-            사용자가 눈으로 보는 웹 페이지의 디자인 및 기능을 구현하는 작업입니다.
-            웹사이트를 하나의 음식점이라고 비유한다면, 프론트엔드는 음식을 서빙하고 주문을 받는 홀의 직원들이라고 할 수 있습니다.
+        <h2>Simba</h2>
+        <img src="simba.webp" width="350px">
+        <p>월트 디즈니 애니메이션 스튜디오의 장편 애니메이션 《라이온 킹》의 주인공. 캐릭터 모델은 윌리엄 셰익스피어의 희곡 중 하나인 '햄릿'의 햄릿.
         </p> 
+        <p>프라이드 랜드의 왕자로, 스토리가 진행되며 왕이 되는 캐릭터. 선대 왕 무파사와 사라비의 아들이자 작중 악당인 스카의 조카이다. 또한 소꿉친구이자 연인은 날라. 둘은 오랜 이별 끝에 재회하고 사랑에 빠져 자연스럽게 서로의 짝이 되며, 심바가 왕이 될 때 날라도 왕비가 된다. 라이온 킹 이후의 공식 후속작에서는 날라와의 사이에서 딸인 키아라와 아들인 카이온을 두었다.
+        </p>
+        <p>어린 시절엔 굉장히 까부는 성격에, 개구쟁이에 작중 최고의 트러블 메이커이지만, 위험에 처한 날라를 구해내는 등 제법 용감한 면이 있다. 그러나 어른이 된 이후엔 어릴 적 아버지를 잃은 트라우마 때문인지 성격도 유해지고 살짝 소심한 면이 생겼다. 그래도 자신을 트라우마 속에서 버틸 수 있게 힘이 되어준 티몬과 품바와 있을 때는 여전히 장난치는 걸 좋아하는 모습을 보이고 품바가 위험에 처하자 친구를 위해 바로 달려나와 날라와 한판 붙을 정도로 필요할 땐 용감한 건 여전했다.
+        </p>
+        <p>아버지 무파사와 쏙 닮은 모양이다. 삼촌과 어머니조차 다시 재회했을 땐 무파사가 되살아난 것이라 착각했을 정도. 붉은 갈기의 수사자가 무파사의 혈통 외에는 딱히 등장한 적이 없어서라고도 볼 수 있을 것이다.
+        </p>
+        <br>
+        <a href="https://namu.wiki/w/%EC%8B%AC%EB%B0%94">출처: 나무위키</a>
     </body>
 </html>
-<!--target="_blank" title="IntroduceMyself" -->
