--- a/2.html
+++ b/2.html
@@ -1,20 +1,22 @@
 <!doctype html>
 <html>
     <head>
-        <title>LikeLion</title>
+        <title>LionKing - Timon</title>
         <meta charset="utf-8">
     </head>
     <body>
-        <h1><a href="index.html">LikeLion</a></h1>
+        <h1><a href="index.html">LionKing</a></h1>
         <ol>
-            <li><a href="1.html">Front-end</a></li>
-            <li><a href="2.html">Back-end</a></li>
+            <li><a href="1.html">Simba</a></li>
+            <li><a href="3.html">Timon</a></li>
+            <li><a href="2.html">Pumbaa</a></li>
         </ol>
-        <h2>Back-end</h2>
-        <p>백엔트(Back-end)란 웹사이트의 서버 측에서 동작하는 기능을 개발하는 것이다.
-            백엔드 개발이란 웹사이트의 프로세스와 관련된 서버 및 데이터베이스를 관리하는 작업입니다. 사용자가 요청하는 데이터를 처리하고 적절한 응답을 보내는 역할을 담당합니다.
-            프론트가 홀의 직원들이라면, 백엔드는 음식을 만드는 주방의 직원들에 비유할 수 있습니다.
-        </p> 
+        <h2>Pumbaa</h2>
+        <img src="Pumbaa.webp" width="350px">
+        <p>품바의 풀네임은 '품바 스미스 (Pumbaa Smith)'로 성격은 우직하고 순한 편이다. 심바를 우리가 거두어주자고 티몬을 설득했으며 날라와 심바가 데이트하는 것을 보고 흐뭇해 하는 등 심바를 친자식처럼 아끼고 사랑한다. 
+            전투력도 출중 해서 전투 면에서 활약하기도 한다. 둔해 보이는 데다 평소엔 티몬에게 바보라고 자주 타박을 듣곤 하지만 사실 굉장히 박식하다. 식신, 탱커, 몸통박치기, 정줄놓 기믹이 있는데 식신의 경우 코와 꼬리가 레이더처럼 음식물을 탐지할 수도 있다. 
+            엄청나게 박식한 멧돼지로 일반 상식은 티몬보다 풍부하지만 순진해서 티몬이 엉뚱한 설명을 해도 원래 지식 대신 그걸 전부 믿는다. 참고로 이 이름은 개명한 뒤의 이름이라고 한다.</p>
+        <br>
+        <a href="https://namu.wiki/w/%ED%8B%B0%EB%AA%AC%EA%B3%BC%20%ED%92%88%EB%B0%94">출처: 나무위키</a>
     </body>
 </html>
-<!--target="_blank" title="IntroduceMyself" -->
