--- a/index.html
+++ b/index.html
@@ -1,18 +1,24 @@
 <!doctype html>
 <html>
     <head>
-        <title>LikeLion</title>
+        <title>LionKing</title>
         <meta charset="utf-8">
     </head>
     <body>
-        <h1><a href="index.html">LikeLion</a></h1>
+        <h1><a href="index.html">LionKing</a></h1>
         <ol>
-            <li><a href="1.html">Front-end</a></li>
-            <li><a href="2.html">Back-end</Back-end></a></li>
+            <li><a href="1.html">Simba</a></li>
+            <li><a href="3.html">Timon</a></li>
+            <li><a href="2.html">Pumbaa</a></li>
         </ol>
-        <h2>LikeLion</h2>
-        <p>심바. 멋쟁이사자처럼 대학은 테크 기반의 아이디어 실현을 위한 전국 최대 규모의 대학 엽합 창업 동아리입니다. 코딩을 해보신 적이 없어도 괜찮아요. 멋대 11기에서 코딩을 배워 자신만의 아이디어를 실현해보세요.</p>
-        <p>다른 대학의 멋사인들은 어떤 아이디어를 가지고 있을까요? 매년 여름, 전국 1,000여명 이상이 참가하는 멋대 전체 해커톤에 참가하여 직접 확인해보세요.</p> 
+        <h2>LionKing</h2>
+        <img src="LionKing.jpeg" width="200px">
+        <p>《라이온 킹》(The Lion King)은 1994년 월트 디즈니 피처 애니메이션에서 제작하고 월트 디즈니 픽처스에서 같은 해 7월 15일 개봉한 미국의 애니메이션 영화로, 역대 32번째 클래식 애니메이션 장편 영화이다. 
+            줄거리는 창작 스토리로 셰익스피어의 비극 《햄릿》에 큰 영향을 받았으며, 인격화된 동물들이 사는 아프리카의 한 왕국을 배경으로 사자 심바의 왕이 되기까지의 여정을 다루고 있다. 2003년 영화 《니모를 찾아서》가 개봉되기 전까지는 역사상 가장 높은 흥행 수익을 거둔 애니메이션 영화였다. 현재 《라이온 킹》은 전통 2D 애니메이션 영화 중에서는 여전히 가장 높은 흥행 수익을 기록하고 있으며, 디즈니 르네상스에 속해있는 작품이기도 하다.
+        </p>
+        <p>《라이온 킹》은 애니메이션의 상징으로 간주되고 있으며, 평론가들로부터 음악과 줄거리에 대한 극찬을 받으며 긍정적인 평가를 받았다. 영화가 개봉하던 1994년 당시에는 7억 8,300만 달러가 넘는 전 세계 흥행 실적을 달성하였고, 그 해에 가장 성공한 영화가 되었다. 최근에는 24번째로 높은 흥행 성적을 거둔 영화로 알려졌다.
+        </p>
+        <br>
+        <a href="https://ko.wikipedia.org/wiki/%EB%9D%BC%EC%9D%B4%EC%98%A8_%ED%82%B9">출처: 위키백과</a>
     </body>
 </html>
-<!--target="_blank" title="IntroduceMyself" -->
